# dance

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  automl_fun.sh  get_result_web.py  install.sh  optuna_scheduler.py  proxy.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini  web-variables.env  workflow_with_functions
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml  test_examples.yml
dance/: __init__.py  conditional_parameter.yml  config.py  exceptions.py  pipeline.py  registers.py  registry.py  settings.py  typing.py
dance/atlas/: data_dropbox_upload.py
dance/atlas/sc_similarity/: anndata_similarity.py
dance/automl_config/: fun2code.py  step2_config.py  step3_config.py
dance/data/: __init__.py  base.py
dance/datasets/: __init__.py  base.py  multimodality.py  singlemodality.py  spatial.py
dance/legacy/automl_config/: readme.txt  step2_config.py  step3_config.py
dance/metadata/: clustering.csv  imputation.csv  imputation.py  scdeepsort.csv
dance/models/nn/: __init__.py  gnn.py  mlp.py
dance/modules/: base.py
dance/modules/multi_modality/: __init__.py
dance/sc_similarity/: anndata_similarity.py  download_data.py
dance/transforms/: __init__.py  base.py  cell_feature.py  filter.py  gene_holdout.py  graph.py  graph_construct.py  interface.py  mask.py  misc.py  normalize.py  preprocess.py  pseudo_gen.py  pseudobulk.py  sc3_feature.py  scn_feature.py  spatial_feature.py  stats.py
dance/transforms/graph/: RESEPT_graph.py  __init__.py  cell_feature_graph.py  dstg_graph.py  feature_feature_graph.py  heteronet_graph.py  neighbor_graph.py  resept_graph.py  scmogcn_graph.py  spatial_graph.py
dance/utils/: __init__.py  deprecate.py  download.py  io.py  loss.py  matrix.py  metrics.py  misc.py  preprocess.py  regular.py  status.py  wrappers.py
docker/: Dockerfile  README.md
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: atlas.rst  data.rst  datasets.rst  search.rst  transforms.graph.rst  transforms.rst
docs/source/experiments/: index.rst  step3_default_config.rst  step_functions_index.rst
docs/source/modules/: multi_modality.rst  single_modality.rst  spatial.rst
docs/source/tutorials/: tutorial.ipynb
examples/: dataset_server.json  get_result_web.py  heart_ans.csv  readme.md
examples/atlas/: Cell Type Annotation Atlas.xlsx  Cell Type Annotation Atlas_origin.xlsx  get_result_web.py  results.xlsx  setup_run.py  temp.sh  test_get_result_web.py  upload_data.py
examples/atlas/config/: commands.yaml  readme.md  run_config.csv  run_config.yaml
examples/atlas/demos/: main.py
examples/atlas/metadatas/: readme.md
examples/atlas/sc_similarity_examples/: cal_w1_w2.py  example_usage_anndata.py  process_similarity.py  readme.md  run_similarity_optimization.sh  sim_query_atlas.py  vis.py
examples/atlas/sweep_results/: Blood_ans.csv  Brain_ans.csv  Heart_ans.csv  Intestine_ans.csv  Kidney_ans.csv  Lung_ans.csv  Pancreas_ans.csv
examples/result_analysis/: get_important_pattern.py  get_important_pattern_sweep.py  get_num.py  results.xlsx
examples/sc_similarity_examples/: sim_query_atlas.py
examples/tuning/: README.md  all_pipline_config.yaml  check_sweep.py  get_important_pattern.py  handle_error.py  handle_sweep.py  step3_default_params.yaml  variable.yaml
notebooks/: dance_data_tutorial.ipynb
sc_similarity/: anndata_similarity.py  example_usage.py
test_automl/: config.py  fun2code.py  optuna_wandb.py  optuna_wandb_nocontainer_step3.py  readme.txt  step2.py  step2_cell_type_annotation_actinn_example.py  step2_clustering_scdcc.py  step2_config.py  step2_example.py  step2_imputation_deepimpute.py  step3.py  step3_cell_type_annotation_actinn_example.py  step3_clustering_scdcc.py  step3_config.py  step3_fun.py  step3_imputation_deepimpute.py  sweep-config.yaml  test.py  test_automl_fun_2.py  test_automl_fun_job.py  test_automl_step2.py  wandb_step2.py  web-variables.env
test_automl/step2_examples/: step2_clustering_scdcc.py  step2_imputation_deepimpute.py
test_automl/step3_examples/: step3_cell_type_annotation_actinn_example.py  step3_clustering_scdcc.py  step3_imputation_deepimpute.py
test_automl/tests/: step3_test.py
tests/: conftest.py  test.ipynb  test_bench.py  test_config.py  test_get_result_web.py  test_mudata_to_anndata.py  test_pipeline.py  test_registry.py
tests/atlas/: test_anndata_similarity.py  test_atlas.py
tests/data/: test_data.py
tests/setup/: README.md  run.sb
tests/transforms/: test_RESPETGraph.py  test_SC3Feature.py  test_TangramFeature.py  test_basics.py  test_celltypeNums.py  test_filter.py  test_filter_cell_gene.py  test_interface.py  test_normalize.py  test_scanpy_order.py  test_transforms.py  test_transforms_automl.py
tests/utils/: test_matrix.py
(+530 files in other folders)
