[metadata]
name = pydance
version = 1.0.0-rc.1
description = Deep Learning for Single-cell Analysis
long_description = file: README.md
long_description_content_type = text/markdown

# Author info
author = "DANCE Team"
author_email = "danceteamgnn@gmail.com"

# Links
url = https://github.com/OmicsML/dance

# License
license_files = file: LICENSE.md
license = BSD 2-Clause License

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    Single-cell Biology
    Deep Learning
    Graph Neural Networks

[options]
install_requires =
    h5py
    leidenalg
    networkx
    numba
    numpy
    opencv-python
    openpyxl
    pandas
    psutil>=5.8.0
    pyro-ppl
    python-igraph
    rdata
    requests
    scanpy
    scikit-learn
    scikit-misc
    scipy
    seaborn
    skorch
    statsmodels
    tables
    tqdm

zip_save = false
include_package_data = true
python_requires = >=3.6

packages = find:

[options.extras_require]
dev =
    pre-commit==2.20.0
    pytest==7.1.3
    pytest-xdist==2.5.0
    tox==3.26.0
