[metadata]
name = pydance
version = 1.0.0-rc.1
description = Deep Learning for Single-cell Analysis
long_description = file: README.md
long_description_content_type = text/markdown

# Author info
author = "DANCE Team"
author_email = "danceteamgnn@gmail.com"

# Links
url = https://github.com/OmicsML/dance

# License
license_files = file: LICENSE.md
license = BSD 2-Clause License

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    Single-cell Biology
    Deep Learning
    Graph Neural Networks

[options]
install_requires =
    h5py
    leidenalg
    mudata
    networkx
    numba
    numpy
    opencv-python
    openpyxl
    pandas
    pyro-ppl
    python-igraph
    requests
    scanpy
    scikit-learn
    scikit-misc
    scipy
    statsmodels
    tables
    tqdm

zip_save = false
include_package_data = true
python_requires = >=3.8

packages = find:

[options.extras_require]
dev =
    pre-commit==3.3.2
    pytest-subtests==0.10.0
    pytest-xdist==3.2.1
    pytest==7.3.1
    tox==4.6.0
doc =
    sphinx
    sphinx-autodoc-typehints
    sphinx_rtd_theme
    sphinxcontrib-napoleon
