[metadata]
name = pydance
version = 1.0.1-dev
description = Deep Learning for Single-cell Analysis
long_description = file: README.md
long_description_content_type = text/markdown

# Author info
author = "DANCE Team"
author_email = "danceteamgnn@gmail.com"

# Links
url = https://github.com/OmicsML/dance

# License
license_files = file: LICENSE.md
license = BSD 2-Clause License

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    Single-cell Biology
    Deep Learning
    Graph Neural Networks

[options]
install_requires =
    h5py
    igraph
    leidenalg
    mudata
    networkx
    numba
    numpy
    opencv-python
    openpyxl
    pandas
    pyro-ppl
    requests
    scanpy
    scikit-learn
    scikit-misc
    scipy
    statsmodels
    tables
    threadpoolctl>=3.1.0  # https://github.com/scikit-learn/scikit-learn/issues/24238
    tqdm

zip_save = false
include_package_data = true
python_requires = >=3.8

packages = find:

[options.extras_require]
dev =
    pre-commit==3.4.0
    pytest-subtests==0.11.0
    pytest-xdist==3.3.1
    pytest==7.4.2
    tox==4.11.3
doc =
    sphinx
    sphinx-autodoc-typehints
    sphinx_rtd_theme
    sphinxcontrib-napoleon
